--- a/presentation/src/main/res/menu/word_actions_menu.xml
+++ b/presentation/src/main/res/menu/word_actions_menu.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/translate" android:title="Translate" />
-    <item android:id="@+id/synonyms" android:title="Synonims" />
-    <item android:id="@+id/more" android:title="More" />
+    <item android:id="@+id/translate" android:title="@string/word_translate" />
+    <item android:id="@+id/definition" android:title="@string/word_definition" />
+    <item android:id="@+id/more" android:title="@string/word_more_actions" />
 </menu>
