added mapstruct, word and language entities, updating records, refactoring

--- a/presentation/src/main/res/menu/records_editor_menu.xml
+++ b/presentation/src/main/res/menu/records_editor_menu.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
         android:id="@+id/action_translate"
         android:icon="@drawable/ic_g_translate_black"
         android:title="Translate"
-        app:showAsAction="always"/>
+        app:showAsAction="always" />
 
     <item
         android:id="@+id/remove_records"
