added removing record

--- a/presentation/src/main/res/layout/record_item.xml
+++ b/presentation/src/main/res/layout/record_item.xml
@@ -9,6 +9,9 @@
             name="clickListener"
             type="com.san.leng.ui.records.RecordListener" />
         <variable
+            name="recordContextMenuListener"
+            type="com.san.leng.ui.records.RecordContextMenuListener" />
+        <variable
             name="record"
             type="com.san.domain.entities.RecordEntity" />
     </data>
