--- a/presentation/src/main/res/menu/records_editor_menu.xml
+++ b/presentation/src/main/res/menu/records_editor_menu.xml
@@ -2,11 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item
+<!--    <item
         android:id="@+id/action_translate"
         android:icon="@drawable/ic_g_translate_black"
         android:title="Translate"
-        app:showAsAction="always" />
+        app:showAsAction="always" />-->
 
     <item
         android:id="@+id/remove_records"
