--- a/presentation/src/main/res/layout/fragment_records.xml
+++ b/presentation/src/main/res/layout/fragment_records.xml
@@ -42,13 +42,13 @@
                     android:id="@+id/record_list"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:items="@{viewModel.records}"
+                    app:records="@{viewModel.records}"
                     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
             </LinearLayout>
         </ScrollView>
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
+<!--        <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/addRecord"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -57,7 +57,7 @@
             android:layout_marginBottom="64dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:srcCompat="@drawable/ic_add" />
+            app:srcCompat="@drawable/ic_add" />-->
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
