--- a/presentation/src/main/res/layout/fragment_edit_record.xml
+++ b/presentation/src/main/res/layout/fragment_edit_record.xml
@@ -7,7 +7,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.san.leng.ui.records.add_record.AddRecordViewModel" />
+            type="com.san.leng.ui.records.edit_record.EditRecordViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -20,7 +20,7 @@
         android:paddingEnd="16dp"
         android:paddingRight="16dp"
         android:paddingBottom="16dp"
-        tools:context=".records.add_record.AddRecordFragment">
+        tools:context=".records.edit_record.EditRecordFragment">
 
         <EditText
             android:id="@+id/record_title"
@@ -34,7 +34,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <ScrollView
-            android:id="@+id/scrollView"
+            android:id="@+id/scroll_view"
             android:layout_width="0dp"
             android:layout_height="200dp"
             android:layout_marginTop="10dp"
@@ -52,7 +52,7 @@
                 android:text="@={viewModel.currentRecord.description}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.423"
+                app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/record_title"
                 app:layout_constraintVertical_bias="0.0" />
@@ -60,17 +60,19 @@
         </ScrollView>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/record_save"
+            android:id="@+id/record_update"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
-            android:layout_margin="16dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
             android:clickable="true"
-            android:onClick="@{() -> viewModel.saveRecord()}"
+            android:focusable="true"
+            android:onClick="@{() -> viewModel.updateRecord()}"
             app:layout_anchorGravity="bottom|right|end"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:srcCompat="@drawable/ic_add" />
+            app:srcCompat="@drawable/ic_save_32" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
