--- a/presentation/src/main/res/menu/bottom_navigation_menu.xml
+++ b/presentation/src/main/res/menu/bottom_navigation_menu.xml
@@ -1,22 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/dashboardFragment"
+        android:id="@+id/dashboard_fragment"
         android:enabled="true"
         android:icon="@drawable/ic_dashboard_foreground"
         android:title="@string/dashboard_label"/>
     <item
-        android:id="@+id/recordsFragment"
+        android:id="@+id/records_fragment"
         android:enabled="true"
         android:icon="@drawable/ic_records_foreground"
         android:title="@string/records_label"/>
     <item
-        android:id="@+id/dictionaryFragment"
+        android:id="@+id/dictionary_fragment"
         android:enabled="true"
         android:icon="@drawable/ic_dictionary_foreground"
         android:title="@string/dictionary_label"/>
     <item
-        android:id="@+id/usefulInfoFragment"
+        android:id="@+id/useful_info_fragment"
         android:enabled="true"
         android:icon="@drawable/ic_info_foreground"
         android:title="@string/useful_info_label"/>
